# davies-snow-sensor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.pi.txt  requirements.txt
config/: config.txt  station.example.yaml  station.yaml  station_template.yaml
data/operational/: snow_data.csv  snow_data_sensors.csv
deploy/: fstab.example  snow-backup-monitor.service  snow-backup-monitor.timer  snow-base-station.service  snow-firstboot.service  snow-sensor.service  snow-sensor.timer
docs/: data_dictionary.md  data_schema.md  ds18b20_datasheet_reference.md  methodology.md  preprint.md  reference_validation.md  software_architecture.md
hardware/: bill_of_materials.md  multiplexing_board_wiring.md
scripts/: continuous_distance.py  deploy.sh  diagnose_hcsr04.py  enable_interfaces.sh  first_boot_provision.py  reference_pi_validation.sh  station_diagnostics.sh  station_setup.sh  sync_timer_interval.py  test_hardware.py
src/: __init__.py
src/analysis/: data_loader.py
src/base_station/: __init__.py  data_aggregator.py  lora_receive.py  main.py
src/sensor/: __init__.py  config.py  cycle.py  local_storage.py  lora.py  lora_transmit.py  main.py  oled_display.py  power.py  qc.py  station_config.py  storage.py  temperature.py  ultrasonic.py
systemd/: snow-sensor.service  snow-sensor.timer
tests/: __init__.py  conftest.py  test_base_station_main.py  test_config.py  test_cycle.py  test_data_aggregator.py  test_data_loader.py  test_first_boot_provision.py  test_local_storage.py  test_lora.py  test_main.py  test_power.py  test_qc.py  test_radio_message_format.py  test_sensor_main.py  test_station_config.py  test_storage.py  test_temperature.py  test_ultrasonic.py
