[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davies-snow-sensor"
version = "0.1.0"
description = "Davies Snow Sensor software stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
hardware = [
    "RPi.GPIO>=0.7.1",
    "gpiozero>=2.0",
    "adafruit-blinka>=8.0.0",
    "adafruit-circuitpython-rfm9x>=2.0.0",
    "w1thermsensor>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
