[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "davies-snow-sensor"
version = "0.1.0"
description = "Davies Snow Sensor software stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
hardware = [
    "RPi.GPIO>=0.7.1,<1.0",
    "gpiozero>=2.0,<3.0",
    "adafruit-blinka>=8.0.0,<9.0",
    "adafruit-circuitpython-rfm9x>=2.0.0,<3.0",
    "w1thermsensor>=2.0,<3.0",
    "lgpio>=0.2.2,<1.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
snow-sensor = "src.sensor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: tests that require real Pi hardware (skipped by default on CI)",
]
